2008-05-15  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* multi.man: Updated to changes in doctools (sub)section reference
	  handling.

2008-02-27  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* traverse.tcl: Made snit dependency more strict, requesting 1.3+.

2007-10-22  Andreas Kupries  <andreask@activestate.com>

	* fileutil.tcl: Changed handling of broken symbolic links
	* fileutil.man: by fileutil::find and fileutil::traverse.
	* traverse.tcl: They are now recognized and returned.
	* traverse.man: Extended the testsuite. Bumped fileutil
	* pkgIndex.tcl: to v1.13.4 and fileutil::traverse to v0.4.
	* find.setup:
	* find.test:
	* traverse.text:

2007-09-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.10 ========================
	* 

2007-08-15  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* multiop.setup: Moved the common setup code for the testing of
	* multiop.test: the multi-file operations into a separate file.
	* multi.test: Added commands to query the state of objects.
	* multiop.tcl: Updated both testsuite and documentation. Version
	* multiop.man: bumped to 0.5.
	* pkgIndex.tcl:

2007-08-15  Andreas Kupries  <andreask@activestate.com>

	* multiop.tcl (ChDir, ChUp): Fixed the method calls in change dir
	* multiop.man: operations, forget the $self. Version bumped to 0.4.
	* pkgIndex.tcl:

2007-08-13  Andreas Kupries  <andreask@activestate.com>

	* multiop.tcl (Expand): Fixed bug in recursive expansion, pattern
	  applies to the last segment of the path.

	* multiop.tcl: New features coming out of dog-fooding: Removed
	* multiop.man: hardwired fixation on files, accept all paths by
	* multiop.test: default, and added commands to allow the user to
	* multi.test: limit the expansion to files, firectories, or links.
	* pkgIndex.tcl: New command to allow the user to specify how
	  strict checking of the 'in(to)' argument is, and if empty