@@ -1,3 +1,10 @@
+2008-06-20  Andreas Kupries  <andreask@activestate.com>
+
+	* multiop.tcl: Fixed usage of struct::stack. Now using the
+	* multiop.man: official construction command instead of an
+	* pkgIndex.tcl: internal command recently removed from the
+	  struct::stack package. Bumped version to 0.5.1.
+
 2008-05-15  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
 	* multi.man: Updated to changes in doctools (sub)section reference
